# PRISM

./: .gitignore  CLAUDE.md  checkpoints.md  master.md  prism_plan_implementation.md  pyproject.toml  requirements.txt
experiments/: exp_a_calibration.py  exp_a_sweep.py  exp_b_exploration.py
notebooks/: 00_prism_concepts.ipynb  00a_spectral_deep_dive.ipynb  00b_calibration_methods.ipynb  01_sr_validation.ipynb  02_experiment_tracking.ipynb  03_calibration_tracking.ipynb
prism/agent/: controller.py  meta_sr.py  prism_agent.py  sr_layer.py
prism/analysis/: calibration.py  metrics.py  results.py  spectral.py  visualization.py
prism/baselines/: __init__.py  base_agent.py  calibration_baselines.py  sr_bayesian.py  sr_blind.py  sr_count.py  sr_count_matched.py  sr_oracle.py
prism/env/: __init__.py  dynamics_wrapper.py  exploration_task.py  perturbation_schedule.py  state_mapper.py
prism/pedagogy/: __init__.py  toy_grid.py
tests/: test_baselines.py  test_calibration.py  test_calibration_baselines.py  test_dynamics_wrapper.py  test_meta_sr.py  test_sr_layer.py  test_state_mapper.py
