[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism"
version = "0.1.0"
description = "Predictive Representation for Introspective Spatial Metacognition"
requires-python = ">=3.11,<3.13"
dependencies = [
    "minigrid>=2.3,<3.0",
    "gymnasium>=0.29,<1.0",
    "numpy>=1.24,<2.0",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pandas>=2.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
export = ["anthropic>=0.70"]

[tool.setuptools.packages.find]
include = ["prism*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
